--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,9 @@
 }
 
 .center-container {
-  @apply mx-auto lg:w-1/2 md:w-3/4 w-[90%]
+  @apply mx-auto lg:w-2/4 md:w-3/4 w-[95%]
+}
+
+.mood-center-container {
+  @apply mx-auto lg:w-3/5 md:w-3/4 w-[95%]
 }
